# visionforge

./: .gitignore  .spark-initial-sha  ARCHITECTURE.md  CLEANUP_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_QUICK_START.md  MIGRATION_GUIDE.md  NOTICE  PRD.md  QUICK_START_CHECKLIST.md  README.md  REMAINING_TASKS.md  RENDER_DEPLOYMENT_FIX.md  RENDER_SINGLE_SERVICE_DEPLOYMENT.md  SETUP_COMPLETE.md  STATUS.md  THIRD-PARTY-NOTICES.md  build_frontend.sh  fix-imports.sh  package-lock.json  package.json  render.yaml  test_loss_multiple_inputs.py  test_nodespec_system.py
project/: .env.example  build_frontend.bat  build_frontend.sh  db.sqlite3  pyproject.toml  render.yaml  requirements.txt  verify_nodes.py
project/backend/: settings.py  urls.py
project/backend/frontend/: package-lock.json
project/backend/frontend/src/components/: BlockPalette.tsx
project/backend/frontend/src/lib/: codeGenerator.ts
project/block_manager/: admin.py  models.py  serializers.py  urls.py
project/block_manager/documentation/: API_REFERENCE.md
project/block_manager/migrations/: 0001_initial.py
project/block_manager/services/: ai_service_factory.py  claude_service.py  gemini_service.py  pytorch_codegen.py  tensorflow_codegen.py  validation.py
project/block_manager/services/nodes/: base.py  ports.py  registry.py
project/block_manager/views/: architecture_views.py  chat_views.py  export_views.py  project_views.py  validation_views.py
project/frontend/: .env.example  EXPORT_FORMAT.md  README.md  index.html  package-lock.json  package.json  test-input-connections.js  vite.config.ts
project/frontend/src/: App.tsx  index.css  main.css  main.tsx
project/frontend/src/components/: ApiKeyModal.tsx  BlockNode.tsx  BlockPalette.tsx  Canvas.tsx  Canvas.tsx.backup  ChatBot.tsx  CodeEditor.tsx  CodePreview.tsx  ConfigPanel.tsx  ContextMenu.tsx  CustomConnectionLine.tsx  CustomLayerModal.tsx  Header.tsx  HistoryToolbar.tsx  ResizableBlockPalette.tsx  ThemeToggle.tsx  ViewCodeModal.tsx
project/frontend/src/contexts/: ApiKeyContext.tsx
project/frontend/src/hooks/: use-codemirror-theme.ts
project/frontend/src/landing/: LandingPage.tsx  index.ts
project/frontend/src/lib/: api.ts  apiKeyContext.tsx  apiUtils.ts  blockDefinitions.ts  exportImport.ts  localStorageService.ts  nodeSpec.types.ts  projectApi.ts  store.ts  types.ts  useNodeSpecs.ts
python/: .env.example  README.md  pyproject.toml
python/vision_forge/: __init__.py  cli.py  server.py
python/vision_forge/inference/: __init__.py
python/vision_forge/services/: __init__.py  ai_service_factory.py  gemini_service.py  inference.py  pytorch_codegen.py  tensorflow_codegen.py  validation.py
python/vision_forge/services/nodes/: __init__.py
(+281 files in other folders)
